--- a/old/text.html
+++ b/old/text.html
@@ -19,6 +19,9 @@
         <p>
             sample
         </p>
+        <p>
+            sample 2
+        </p>
         
         <p class="apple-text">
             texavhing me i also like to practice 
