--- a/old/text.html
+++ b/old/text.html
@@ -22,6 +22,9 @@
         <p>
             sample 2
         </p>
+        <p>
+            bug fix
+        </p>
         
         <p class="apple-text">
             texavhing me i also like to practice 
